--- a/index.html
+++ b/index.html
@@ -132,3 +132,9 @@ applyFilters();
 </script>
 </body>
 </html>
+
+<div class="p-4 bg-white border rounded my-6">
+  <h2 class="text-lg font-semibold mb-2">Suggest a comedian</h2>
+  <iframe src="<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfPsKCHb7jIQwYHdj2QPdUCzWBmX_mJ6s_ASuRJzLG1JhFxzQ/viewform?embedded=true" width="640" height="381" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+  <p class="text-sm text-slate-500 mt-2">Submissions go to a Google Sheet for review before they're added to the site.</p>
+</div>
