--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
         </select>
       </label>
       <label class="flex items-center gap-2">Order:
-        <select id="order" class="p-2 border rounded"><option value="desc">Desc</option><option value="asc">Asc</option></select>
+        <select id="order" class="p-2 border rounded">
+          <option value="desc">Desc</option>
+          <option value="asc">Asc</option>
+        </select>
       </label>
     </div>
 
@@ -123,18 +126,30 @@ document.getElementById('resetBtn').addEventListener('click', ()=>{ document.get
 document.getElementById('downloadCsv').addEventListener('click', function(){
   const header = ["Name","Show","About","Agent","Email","Venues","SoldOutCount","AddedShows","ReviewURL","ClipURL","DevelopPotential","Notes"];
   const rows = DATA.map(d => [d.name,d.show,d.about,d.agent,d.email,d.venues,d.soldOutCount||'',d.addedShows||'',d.review,d.clip,d.developPotential,d.notes]);
-  const csv = [header, ...rows].map(r => r.map(c => '"' + String(c).replace(/"/g,'""') + '"').join(',')).join('\\n');
+  const csv = [header, ...rows].map(r => r.map(c => '"' + String(c).replace(/"/g,'""') + '"').join(',')).join('\n');
   const blob = new Blob([csv], { type: 'text/csv' }); const url = URL.createObjectURL(blob);
   const a = document.createElement('a'); a.href = url; a.download = 'avalon-fringe-pipeline.csv'; a.click(); URL.revokeObjectURL(url);
 });
 
 applyFilters();
 </script>
+
+<div class="max-w-6xl mx-auto p-6">
+  <div class="p-4 bg-white border rounded my-6">
+    <h2 class="text-lg font-semibold mb-2">Suggest a comedian</h2>
+    <iframe 
+      src="https://docs.google.com/forms/d/e/1FAIpQLSfPsKCHb7jIQwYHdj2QPdUCzWBmX_mJ6s_ASuRJzLG1JhFxzQ/viewform?embedded=true" 
+      width="100%" 
+      height="700" 
+      frameborder="0" 
+      marginheight="0" 
+      marginwidth="0">
+      Loading…
+    </iframe>
+    <p class="text-sm text-slate-500 mt-2">Submissions go to a Google Sheet for review before they're added to the site.</p>
+  </div>
+</div>
+
 </body>
 </html>
 
-<div class="p-4 bg-white border rounded my-6">
-  <h2 class="text-lg font-semibold mb-2">Suggest a comedian</h2>
-  <iframe src="<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfPsKCHb7jIQwYHdj2QPdUCzWBmX_mJ6s_ASuRJzLG1JhFxzQ/viewform?embedded=true" width="640" height="381" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-  <p class="text-sm text-slate-500 mt-2">Submissions go to a Google Sheet for review before they're added to the site.</p>
-</div>
