--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
       <thead class="bg-gray-100 sticky top-0">
         <tr>
           <th>Title</th>
-          <th>Playwright</th>
-          <th>Venue</th>
-          <th>Genre / Style</th>
-          <th>Reviews</th>
-          <th>Score / Potential</th>
-          <th>Notes</th>
+          <th>Written by</th>
+          <th>Directed by</th>
+          <th>Theatre</th>
+          <th>Synopsis</th>
+          <th>Run Dates</th>
+          <th>Additional Notes</th>
         </tr>
       </thead>
       <tbody id="plays-tbody"></tbody>
